[metadata]
name = smartmeter
version = 0.0.1
description = Smartmeter package for reading and parsing p1 data
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = smartmeter, p1
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
package_dir=
    =src

[options.packages.find]
where=src